# lego

./: .gitignore  CMakeLists.txt  README.md  example.cpp
include/lego/: lego.hpp
